T&C, Refund Policy and PrivacyPolicy

--- a/prj-02/src/styles/HomePage.css
+++ b/prj-02/src/styles/HomePage.css
@@ -134,7 +134,7 @@
     transition: background-color 0.3s, transform 0.2s;
   }
   .homepage-btn:hover {
-    background-color: #14516c;
+    background-color: #1F6281;
     transform: translateY(-2px);
   }
   
